# DeepResearch2

./: .dockerignore  .env.docker  .env.docker.example  .env.example  .gitignore  .pre-commit-config.yaml  .replit  AGENTS.md  CHANGELOG.md  COMMIT_MESSAGE.md  DEPLOYMENT.md  DOCKER_DEPLOYMENT.md  Dockerfile  E2E_TEST_REPORT.md  FINAL_VALIDATION.md  MCP_SERVER_ANALYSIS.md  PRODUCTION_READINESS_REPORT.md  PRODUCTION_READY.md  Procfile  README.md  TESTING.md  TEST_SUMMARY.md  analyze_ui.py  app.json  capture_app_screenshots.py  citations_for_deep_research.json  citations_for_ui.csv  claude_deep_research_demo.py  claude_mcp_integration_demo.py  debug_mcp_tools.py  demo_claude_integration.py  deploy_mcp_server.sh  docker-compose.yml  docker-deploy.sh  enhanced_ui_analysis.py  final_production_test.py  fly.toml  main.py  package.json  process_citations.sh  (+41 more)
app/: main.py
attached_assets/: Pasted--Systematic-Review-Screener-Automated-screening-tool-powered-by-Deep-Research-AI-Step-3-Run-Auto-1752434536869_1752434536869.txt  Pasted--body-data-new-gr-c-s-check-loaded-9-80-0-data-gr-ext-installed-noscript-You-need-to-enab-1752435022775_1752435022775.txt  Pasted--usr-bin-env-python-Copyright-2000-by-Jeffrey-Chang-All-rights-reserved-This-code-is-part--1752429703096_1752429703096.txt  Pasted-2025-07-13-12-19-50-442-Thread-Thread-6-run-screening-missing-ScriptRunContext-This-warning-ca-1752409248862_1752409248863.txt  Pasted-Below-is-a-turn-key-minimum-viable-repo-you-can-copy-and-paste-into-an-empty-folder-It-implements-1752403072321_1752403072321.txt  content-1752403254586.md  (+14 more)
(+30 files in other folders)
